# guap_web_tech

./: .gitignore  docker-compose.yml  lk_merge_tool.py  readme..md  readme.md
backend/: CMakeLists.txt  Dockerfile
backend/src/: Database.cpp  Database.h  FormDataProcessor.cpp  FormDataProcessor.h  Helpers.cpp  Helpers.h  helpers.cpp  helpers.h  main.cpp  md5_imp.c  str_to_md5.c  str_to_md5.h
eshop/: package.json  tailwind.config.mjs
eshop/src/app/: layout.js
eshop/src/app/cart/: page.js
eshop/src/app/components/: carousel.js  header.js
eshop/src/app/item/[id]/: page.js
frontend/: Dockerfile  next.config.mjs  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/cart/[id]/: page.js
frontend/src/app/cart/add/[id]/: page.js
frontend/src/app/components/: carousel.js  general.js  header.js
frontend/src/app/context/: AuthContext.js  CartContext.js
frontend/src/app/item/[id]/: page.js
frontend/src/app/logout/: page.js
frontend/src/app/singin/: page.js
frontend/src/app/singup/: page.js
